made the icons larger and added top padding

--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -20,9 +20,9 @@
     <body>
         <nav class="navbar nav-default" role="navigation">
             <div class="container-fluid">
-                <div class="navbar header">
-                    <i class="glyphicon glyphicon-home"></i>
-                    <i class="glyphicon glyphicon-cog pull-right"></i>
+                <div class="navbar header nav-padding">
+                    <i class="glyphicon glyphicon-home large-icon"></i>
+                    <i class="glyphicon glyphicon-cog pull-right large-icon"></i>
                 </div>
             </div>
         </nav>
