--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                    <h1 class="text-center">#Motivate</h1>
+                    <h1 class="text-center">#MOTIVATE</h1>
                     <h3 class="text-center">Challenge!</h3>
                     <br>
                     <br>
