Update and rename HomePage to homepage.html

--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
 		<title>#Motivate</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href = "css/bootstrap.min.css" rel = "stylesheet">
-		<link href = "styles.css" rel = "stylesheet">
+		<link href = ".css" rel = "stylesheet">
 	</head>
 
 	<body>
