added some button functionality

--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
               <div class="clearfix">
                 <input type="password" placeholder="Password">
               </div>
-               <button  id = "login" class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Log In</button>
+               <button  href="homepage.html" id = "login" class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Log In</button>
               <button  id = "signup"class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Sign Up</button>
             </fieldset>
           </form>
