--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -36,7 +36,7 @@
         <nav class="navbar nav-default" role="navigation">
             <div class="container-fluid">
                 <div class="navbar header nav-padding">
-                    <i class="glyphicon glyphicon-home large-icon"></i>
+                    <i href="homepage.html" class="glyphicon glyphicon-home large-icon"></i>
                     <i class="glyphicon glyphicon-cog pull-right large-icon"></i>
                 </div>
             </div>
