--- a/homepage.html
+++ b/homepage.html
@@ -20,9 +20,9 @@
 
 
 				<h1>#MOTIVATE</h1><br>
-				<a href = "#" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
+				<a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
 				<a href = "#" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
-				<a href = "#" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
+				<a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
 				<a href = "#" class = "btn btn-default" id ="buttonsize">STATS</a>
 
 		</div>
