--- a/update.html
+++ b/update.html
@@ -17,7 +17,7 @@
     <br/>
     <nav class="navbar nav-default" role="navigation">
         <div class="container-fluid">
-            <a href="#"><span class="glyphicon glyphicon-home icons"></span></a>
+            <a href="homepage.html"><span class="glyphicon glyphicon-home icons"></span></a>
             <a href="#"><span class="glyphicon glyphicon-cog pull-right icons"></span></a>
         </div>
     </nav>
