image file reorganization

--- a/update.html
+++ b/update.html
@@ -44,17 +44,17 @@
                     <div class="container-fluid" id="update">
                         <div class="btn-group" style="vertical-align:middle;text-align:right"> 
                             <a href="progress.html">
-                                <p><button class="btn btn-large"><img src="ted.jpg"></img>
+                                <p><button class="btn btn-large"><img src="imgs/ted.jpg"></img>
                                     <p style="display:inline-block"> &nbsp; vs. Ted Wu</br>This would be a second line for challenges
                                     <span class="glyphicon glyphicon-chevron-right"></span></button></p>
                             </a>
-                            <p><button class="btn btn-large"><img src="kevin.jpg" ></img>
+                            <p><button class="btn btn-large"><img src="imgs/kevin.jpg" ></img>
                                 <p style="display:inline-block"> &nbsp; vs. Kevin Chen</br>This would be a second line for challenges
                                 <span class="glyphicon glyphicon-chevron-right"></span></button></p>
-                            <p><button class="btn btn-large"><img src="brittany.jpg"></img>
+                            <p><button class="btn btn-large"><img src="imgs/brittany.jpg"></img>
                                 <p style="display:inline-block"> &nbsp; vs. Brittany Lee</br>This would be a second line for challenges
                                 <span class="glyphicon glyphicon-chevron-right"></span></button></p>
-                            <p><button class="btn btn-large"><img src="eric.jpg"></img>
+                            <p><button class="btn btn-large"><img src="imgs/eric.jpg"></img>
                                 <p style="display:inline-block"> &nbsp; vs. Eric Tu</br>This would be a second line for challenges
                                 <span class="glyphicon glyphicon-chevron-right"></span></button></p>
                         </div>
