moved challenge-fs javascript into a file and cleaned up homepage.html

--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -19,16 +19,7 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-        <script type="text/javascript">
-            $(function() {
-                var availableTags = [
-                    "Ted", "Eric", "Kevin","Elaine"
-                ];
-                $("#searchBox").autocomplete({
-                source: availableTags
-                });
-            });
-        </script>
+        <script type="text/javascript" src="js/challenge-fs.js"> </script>
     </head>
 
     <body>
