--- a/homepage.html
+++ b/homepage.html
@@ -31,18 +31,20 @@
                 </a>
             </div>
         </nav>
-        <div class = "container text-center">
 
-
-                <h1>#MOTIVATE</h1><br>
-                <a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
-                <a href = "#" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
-                <a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
-                <a href = "#" class = "btn btn-default" id ="buttonsize">STATS</a>
-
+        <div class="container-fluid">
+            <div class="row">
+                <h1 class="text-center"> #MOTIVATE </h1>
+            </div>
+            <div class="row">
+                <div class="col-md-4"> </div>
+                <div class="col-md-4 text-center">
+                    <a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
+                    <a href = "#" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
+                    <a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
+                    <a href = "#" class = "btn btn-default" id ="buttonsize">STATS</a>
+                </div>
+            </div>
         </div>
-
-        <script src = "js/jquery.js"></script>
-        <script src = "js/bootstrap.js"></script>
     </body>
 </html>
