--- a/template.html
+++ b/template.html
@@ -4,22 +4,24 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Homepage">
-        <meta name="author" content="Eric Tu">
-        <title> #Motivate </title>
+        <meta name="description" content="##PageDescription##">
+        <meta name="author" content="##Name##">
+        <title> #Motivate - PAGE NAME </title>
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/motivate.css">
-        <link rel="stylesheet" type="text/css" href="css/homepage.css">
+        <!-- <link rel="stylesheet" type="text/css" href="css/##PAGE CSS FILE##"> -->
 
         <!-- JS/JQuery-->
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
+        <!-- <script type="text/javascript" src="js/##PAGE JS FILE##"></script> -->
     </head>
 
     <body>
+        <!-- NAVBAR HEADER -->
         <br/>
         <nav class="navbar nav-default" role="navigation">
             <div class="container-fluid">
@@ -31,20 +33,6 @@
                 </a>
             </div>
         </nav>
-
-        <div class="container-fluid">
-            <div class="row">
-                <h1 class="text-center"> #MOTIVATE </h1>
-            </div>
-            <div class="row">
-                <div class="col-md-4"> </div>
-                <div class="col-md-4 text-center">
-                    <a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
-                    <a href = "#" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
-                    <a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
-                    <a href = "#" class = "btn btn-default" id ="buttonsize">STATS</a>
-                </div>
-            </div>
-        </div>
     </body>
+
 </html>
