readded readmes and a template file

--- a/progress.html
+++ b/progress.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Progress">
         <meta name="author" content="Kevin Chen">
-        <title> #Motivate - Progress </title>
+        <title> #Motivate - Progress! </title>
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
