--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Kevin Chen">
+        <meta name="description" content="Challenge">
+        <meta name="author" content="Elaine Chang">
         <title> #Motivate - Challenge! </title>
 
         <!-- CSS -->
