--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Challenge">
         <meta name="author" content="Elaine Chang">
-        <title> #Motivate - Challenge! </title>
+        <title> #Motivate - Challenge </title>
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
