--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -1,11 +1,12 @@
-<!.DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head> 
-        <meta charset = "utf-8">
-        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Challenge">
         <meta name="author" content="Elaine Chang">
-        <title>Motivate - Challenge</title>
+        <title> #Motivate - Challenge </title>
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
