fitted update.html into a 1/3 size container

--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -20,10 +20,10 @@
         <script type="text/javascript" src="js/bootstrap.js"></script>
         <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
         <script type="text/javascript" src="js/challenge-fs.js"> </script>
-
     </head>
 
     <body>
+        <br/>
         <nav class="navbar nav-default" role="navigation">
             <div class="container-fluid">
                 <a href="homepage.html">
@@ -67,3 +67,5 @@
         width: 100%;
     }
 </style>
+
+</html>
