--- a/update.html
+++ b/update.html
@@ -32,34 +32,68 @@
             </div>
         </nav>
 
+        <!-- This all appears off center because the scroll bar appears here! -->
+
         <div class="container-fluid">
             <div class="row">
-                <h1 class="text-center"> #MOTIVATE </h1>
-            </div>
-            <div class="row">
-                <h2 class="text-center"> Choose a user to update challenges for: </h2> 
-            </div>    
-            <div class="row">
-                <center>
+                <div class="col-md-4"> </div>
+                <div class="col-md-4">
+                    <h1 class="text-center"> #MOTIVATE </h1>
+                    <h2 class="text-center"> Choose a user to update challenges for:</h2> 
                     <div class="container-fluid" id="update">
-                        <div class="btn-group" style="vertical-align:middle;text-align:right"> 
+                        <div class="btn-group btn-block"> 
                             <a href="progress.html">
-                                <p><button class="btn btn-large"><img src="imgs/ted.jpg"></img>
-                                    <p style="display:inline-block"> &nbsp; vs. Ted Wu</br>This would be a second line for challenges
-                                    <span class="glyphicon glyphicon-chevron-right"></span></button></p>
+                                <button class="btn btn-large btn-block">
+                                    <div class="container-fluid">
+                                        <div class="col-md-10">
+                                            <img class="prof-pic pull-left" src="imgs/ted.jpg"></img>
+                                            <div id="text"> <br/> &nbsp; vs. Ted Wu <br/> <br/>Details! </div>
+                                        </div>
+                                        <br/>
+                                        <br/>
+                                        <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                                    </div>
+                                </button>
+                                <br/>
+                                <button class="btn btn-large btn-block">
+                                    <div class="container-fluid">
+                                        <div class="col-md-10">
+                                            <img class="prof-pic pull-left" src="imgs/kevin.jpg"></img>
+                                            <div id="text"> <br/> &nbsp; vs. Kevin Chen <br/> <br/>Details! </div>
+                                        </div>
+                                        <br/>
+                                        <br/>
+                                        <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                                    </div>
+                                </button>
+                                <br/>
+                                <button class="btn btn-large btn-block">
+                                    <div class="container-fluid">
+                                        <div class="col-md-10">
+                                            <img class="prof-pic pull-left" src="imgs/brittany.jpg"></img>
+                                            <div id="text"> <br/> &nbsp; vs. Brittany Lee <br/> <br/>Details! </div>
+                                        </div>
+                                        <br/>
+                                        <br/>
+                                        <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                                    </div>
+                                </button>
+                                <br/>
+                                <button class="btn btn-large btn-block">
+                                    <div class="container-fluid">
+                                        <div class="col-md-10">
+                                            <img class="prof-pic pull-left" src="imgs/eric.jpg"></img>
+                                            <div id="text"> <br/> &nbsp; vs. Eric Tu <br/> <br/>Details! </div>
+                                        </div>
+                                        <br/>
+                                        <br/>
+                                        <span class="glyphicon glyphicon-chevron-right pull-right"></span>
+                                    </div>
+                                </button>
                             </a>
-                            <p><button class="btn btn-large"><img src="imgs/kevin.jpg" ></img>
-                                <p style="display:inline-block"> &nbsp; vs. Kevin Chen</br>This would be a second line for challenges
-                                <span class="glyphicon glyphicon-chevron-right"></span></button></p>
-                            <p><button class="btn btn-large"><img src="imgs/brittany.jpg"></img>
-                                <p style="display:inline-block"> &nbsp; vs. Brittany Lee</br>This would be a second line for challenges
-                                <span class="glyphicon glyphicon-chevron-right"></span></button></p>
-                            <p><button class="btn btn-large"><img src="imgs/eric.jpg"></img>
-                                <p style="display:inline-block"> &nbsp; vs. Eric Tu</br>This would be a second line for challenges
-                                <span class="glyphicon glyphicon-chevron-right"></span></button></p>
                         </div>
                     </div>
-                </center>
+                 </div>
             </div>
         </div>
     </body>
