--- a/index.html
+++ b/index.html
@@ -4,46 +4,47 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Login Form">
-        <meta name="author" content="Ted Wu">
-        <title> #Motivate - Login </title>
+        <meta name="description" content="Homepage">
+        <meta name="author" content="Eric Tu">
+        <title> #Motivate </title>
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/motivate.css">
-        <link rel="stylesheet" type="text/css" href="css/login.css">
+        <link rel="stylesheet" type="text/css" href="css/homepage.css">
 
         <!-- JS/JQuery-->
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
-
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine|Inconsolata|Droid+Sans|Montserrat Subrayada|Lily Script One|Chela One|Krona One">
     </head>
 
     <body>
-      <div class="container" >
-        <div class="content" >
-          
-            <div class="login-form" >
-             <h1>#MOTIVATE</h1> 
-             <img src="http://imgs.abduzeedo.com/files/articles/logo-design-gym-fitness/1fddfd04c926df3f790f2ae1ca806123.png" alt="logo image" class="img-circle">
-              <form action="" class = "col-md-5 col-md-offset-4 ">
-                <fieldset>
-                  <div class="clearfix">
-                    <input type="text" placeholder="Username">
-                  </div>
-                  <div class="clearfix">
-                    <input type="password" placeholder="Password">
-                  </div>
-                   <a href="homepage.html">
-                    <button id = "login" class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Log In</button> </a>
-                  <button  id = "signup"class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Sign Up</button>
-                </fieldset>
-              </form>
+        <br>
+        <nav class="navbar nav-default" role="navigation">
+            <div class="container-fluid">
+                <a href="homepage.html">
+                    <span class="glyphicon glyphicon-home icons"></span>
+                </a>
+                <a href="settings.html">
+                    <span class="glyphicon glyphicon-cog pull-right icons"></span>
+                </a>
             </div>
-          
+        </nav>
+
+        <div class="container-fluid">
+            <div class="row">
+                <h1 class="text-center"> #MOTIVATE </h1>
+            </div>
+            <div class="row">
+                <div class="col-md-4"> </div>
+                <div class="col-md-4 text-center">
+                    <a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
+                    <a href = "#" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
+                    <a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
+                    <a href = "#" class = "btn btn-default" id ="buttonsize">STATS</a>
+                </div>
+            </div>
         </div>
-      </div> <!-- /container -->
     </body>
 </html>
