added submit button to search

--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -54,5 +54,11 @@
                 <div class="col-md-4"></div>
             </div>
         </div>
+
+        <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
+            <div class="container-fluid">
+                <a href="challenge-createchallenge.html"> <button type="button" class="btn btn-success btn-lg pull-right"> Submit </button> </a>
+            </div>
+        </nav>
     </body>
 </html>
