--- a/homepage.html
+++ b/homepage.html
@@ -40,7 +40,7 @@
                 <div class="col-md-4"> </div>
                 <div class="col-md-4 text-center">
                     <a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
-                    <a href = "#" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
+                    <a href = "acceptdecline.html" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
                     <a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
                     <a href = "#" class = "btn btn-default" id ="buttonsize">STATS</a>
                 </div>
