--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,7 @@
                     <a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
                     <a href = "acceptdecline.html" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
                     <a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
-                    <a href = "#" class = "btn btn-default" id ="buttonsize">STATS</a>
+                    <a href = "stats.html" class = "btn btn-default" id ="buttonsize">STATS</a>
                 </div>
             </div>
         </div>
