--- a/stats.html
+++ b/stats.html
@@ -1,17 +1,22 @@
 <!.DOCTYPE html>
 <html>
-<head> 
-    <meta charset = "utf-8">
-    <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-    <meta name="description" content="Login Form">
-    <meta name="author" content="Ted Wu">
-    <title>#MOTIVATE </title>
+<head>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Stats">
+        <meta name="author" content="Ted Wu">
+        <title> #Motivate - Stats </title>
 
-    <!-- Bootstrap CSS -->
-    
-    <link href="css/bootstrap.min.css" rel ="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
+        <!-- CSS -->
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="css/motivate.css">
 
+        <!-- JS/JQuery-->
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.js"></script>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine|Inconsolata|Droid+Sans|Montserrat Subrayada|Lily Script One|Chela One|Krona One">
     <style> 
     
