minor stylistic edits + added headers to stats

--- a/settings.html
+++ b/settings.html
@@ -4,24 +4,21 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="##PageDescription##">
-        <meta name="author" content="##Name##">
-        <title> #Motivate - PAGE NAME </title>
+        <meta name="description" content="Settings">
+        <meta name="author" content="Elaine Chang">
+        <title> #Motivate - Settings </title>
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="css/motivate.css">
-        <!-- <link rel="stylesheet" type="text/css" href="css/##PAGE CSS FILE##"> -->
 
         <!-- JS/JQuery-->
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.js"></script>
-        <!-- <script type="text/javascript" src="js/##PAGE JS FILE##"></script> -->
     </head>
 
     <body>
-        <!-- NAVBAR HEADER -->
         <br/>
         <nav class="navbar nav-default" id="top-nav" role="navigation">
             <div class="container-fluid">
@@ -38,8 +35,7 @@
                 <h1 class="text-center"> #MOTIVATE </h1>
             </div>
             <div class="row">
-                <div class="col-md-4"> </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 text-center col-md-offset-4">
                     <a href = "index.html" class = "btn btn-default" id = "buttonsize">Logout</a><br><br>
                 </div>
             </div>
