--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -40,8 +40,7 @@
                 <h1 class="text-center"> #MOTIVATE </h1>
             </div>
             <div class="row">
-                <div class="col-md-4"> </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-md-offset-4">
                     <div class="container-fluid" id="progress-box">
                         <br> <center>
                         <img src="imgs/eric.jpg" class = "img-rounded">
