--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -37,8 +37,7 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4"></div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-md-offset-4">
                     <h1 class="text-center">#MOTIVATE</h1>
                     <h3 class="text-center">Challenge!</h3>
                     <br>
