--- a/homepage.html
+++ b/homepage.html
@@ -37,8 +37,7 @@
                 <h1 class="text-center"> #MOTIVATE </h1>
             </div>
             <div class="row">
-                <div class="col-md-4"> </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-4 text-center col-md-offset-4">
                     <a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
                     <a href = "acceptdecline.html" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
                     <a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
