--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <h1 class="text-center"> #MOTIVATE </h1>
             </div>
             <div class="row">
-                <div class="col-md-4"> </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-md-offset-4">
                     <img src="http://imgs.abduzeedo.com/files/articles/logo-design-gym-fitness/1fddfd04c926df3f790f2ae1ca806123.png" alt="logo image" class="img-circle">
                     <br/>
                     <div class="login-form" >
