--- a/progress.html
+++ b/progress.html
@@ -38,8 +38,7 @@
                 <h1 class="text-center"> #MOTIVATE </h1>
             </div>
             <div class="row">
-                <div class="col-md-4"> </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-md-offset-4">
                     <div class="container-fluid" id="progress-box">
                         <img class="pull-left prof-pic" src="imgs/ted.jpg" alt="...">
                         <h2 class="text-center"> <br/> Ted Wu </h2> <!-- needs to deal with super long names -->
