--- a/update.html
+++ b/update.html
@@ -36,8 +36,7 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4"> </div>
-                <div class="col-md-4">
+                <div class="col-md-4 col-md-offset-4">
                     <h1 class="text-center"> #MOTIVATE </h1>
                     <h2 class="text-center"> Choose a user to update challenges for:</h2> 
                     <div class="container-fluid" id="update">
