image scaling for user icons

--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -43,9 +43,9 @@
                 <div class="col-md-4 col-md-offset-4">
                     <div class="container-fluid" id="progress-box">
                         <br> <center>
-                        <img src="imgs/eric.jpg" class = "img-rounded">
+                        <img src="imgs/eric.jpg" class = "img-rounded" style="max-width: 42%;">
                         vs. 
-                        <img src="imgs/ted.jpg" class = "img-rounded">
+                        <img src="imgs/ted.jpg" class = "img-rounded" style="max-width: 42%;">
                         <br/></center>
                         <h3 class="text-center"> Challenge Confirmation </h3>
                         <ul class="list-group">
@@ -58,7 +58,7 @@
         </div>  
 
 
-        <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
+         <nav class="navbar nav-default navbar-static-bottom" id="bottom-nav" role="navigation">
             <div class="container-fluid">
                 <a href="challenge-createchallenge.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
                 <a href="homepage.html"><button type="button" class="btn btn-success btn-lg pull-right"> Submit </button>
