--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -47,14 +47,14 @@
                     <br>
                     <br>
                     <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id = "buttonsize">Run 3 Miles</a><br>
-                    <a href = "#" class = "btn btn-default" id = "buttonsize">Bench 100 lbs</a><br>
-                    <a href = "#" class = "btn btn-default" id = "buttonsize">Go to the gym 4 times a week</a><br>
-                    <a href = "#" class = "btn btn-default" id = "buttonsize">Do 100 pushups</a><br>
-                    <a href = "#" class = "btn btn-default" id ="buttonsize">Create a new challenge</a><br>
+                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id = "buttonsize">Bench 100 lbs</a><br>
+                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id = "buttonsize">Go to the gym 4 times a week</a><br>
+                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id = "buttonsize">Do 100 pushups</a><br>
+                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id ="buttonsize">Create a new challenge</a><br>
                 <div class="col-md-4"></div>
             </div>
         </div>
-        <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
+        <nav class="navbar nav-default navbar-static-bottom" id="bottom-nav" role="navigation">
             <div class="container-fluid">
                 <a href="challenge-friendsearch.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
             </div>
