--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -42,22 +42,21 @@
                     <h3 class="text-center">Challenge!</h3>
                     <br>
                     <br>
-                    <br>
                     <span class="text-left">WHO TO CHALLENGE:</span>
                     <br>
                     <br>
-                    <div class="right-inner-addon">
-                        <i class="glyphicon glyphicon-search"></i>
-                        <input type="text" class="form-control" id="searchBox" placeholder="Type a Friend's name"/>
+                    <div class="input-group add-on">
+                        <input type="text" class="form-control" id="search-box" placeholder="Type a Friend's name"/>
+                        <div class="input-group-btn"> 
+                            <a href="challenge-createchallenge.html">
+                                <button class="btn btn-default" id="search-button" type="submit">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </a>
+                        </div>
                     </div>
                 <div class="col-md-4"></div>
             </div>
         </div>
-
-        <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
-            <div class="container-fluid">
-                <a href="challenge-createchallenge.html"> <button type="button" class="btn btn-success btn-lg pull-right"> Submit </button> </a>
-            </div>
-        </nav>
     </body>
 </html>
