changed bottom nav bars depending on page to be either static or fixed

--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -58,7 +58,7 @@
         </div>  
 
 
-         <nav class="navbar nav-default navbar-static-bottom" id="bottom-nav" role="navigation">
+         <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
             <div class="container-fluid">
                 <a href="challenge-createchallenge.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
                 <a href="homepage.html"><button type="button" class="btn btn-success btn-lg pull-right"> Submit </button>
