--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -54,7 +54,7 @@
                 <div class="col-md-4"></div>
             </div>
         </div>
-        <nav class="navbar nav-default navbar-static-bottom" id="bottom-nav" role="navigation">
+        <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
             <div class="container-fluid">
                 <a href="challenge-friendsearch.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
             </div>
