--- a/acceptdecline.html
+++ b/acceptdecline.html
@@ -85,12 +85,14 @@
                         </ul>
                     </div>
 
-        <nav class="navbar nav-default navbar-static-bottom" id="bottom-nav" role="navigation">
+        <div class ="navbar navbar-default navbar-fixed-bottom">
+
+
             <div class="container-fluid">
                 <button type="button" class="btn btn-success btn-lg pull-right"> Submit </button> 
                 <button type="button" class="btn btn-warning btn-lg pull-right" id="revert"> Revert </button>
             </div>
-        </nav>
+        </div>
     </body>
 
 
