--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -57,12 +57,14 @@
         </div>  
 
 
-         <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
+                 <div class ="navbar navbar-default navbar-fixed-bottom">
+
+
             <div class="container-fluid">
                 <a href="challenge-createchallenge.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
                 <a href="homepage.html"><button type="button" class="btn btn-success btn-lg pull-right"> Submit </button>
             </div>
-        </nav>
+        </div>
 
 
     </body>
