--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -53,11 +53,13 @@
                 <div class="col-md-4"></div>
             </div>
         </div>
-        <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
+                <div class ="navbar navbar-default navbar-fixed-bottom">
+
+
             <div class="container-fluid">
                 <a href="challenge-friendsearch.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
             </div>
-        </nav>
+        </div>
     </body>
 
 <style>
