--- a/index.html
+++ b/index.html
@@ -22,32 +22,30 @@
     </head>
 
     <body>
-        <div class="container-fluid">
-            <div class="row">
-                <h1 class="text-center"> #MOTIVATE </h1>
-            </div>
+		<div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <img src="http://imgs.abduzeedo.com/files/articles/logo-design-gym-fitness/1fddfd04c926df3f790f2ae1ca806123.png" alt="logo image" class="img-circle">
+                	<img src="imgs/logorect.jpg" alt="logo image" id = "logo">
                     <br/>
                     <div class="login-form" >
-                        <form>
-                            <fieldset>
-                                <div class="clearfix">
-                                    <input type="text" placeholder="Username">
-                                </div>
-                                <div class="clearfix">
-                                    <input type="password" placeholder="Password">
-                                </div>
-                            </fieldset>
-                        </form>
-                        <a href="homepage.html">
-                            <button id = "login" class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Log In</button>
-                        </a>
-                        <button  id = "signup"class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Sign Up</button>
-                    </div>
-                </div>
+
+				<form>
+                    <fieldset>
+	                    <div class="clearfix">
+	                        <input type="text" placeholder="Username">
+	                    </div>
+	                    <div class="clearfix">
+	                        <input type="password" placeholder="Password">
+	                    </div>
+                    </fieldset>
+                </form>
+
+                <a href="homepage.html">
+                            
+                    <button id = "login" class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Log In</button>
+                </a>
+                        
+                    <button  id = "signup"class = "btn btn-primary btn-lg"  class="btn btn-success" type="submit">Sign Up</button>
             </div>
-        </div>
-    </body>
+	</body>
 </html>
