--- a/homepage.html
+++ b/homepage.html
@@ -33,14 +33,24 @@
 
         <div class="container-fluid">
             <div class="row">
-                <h1 class="text-center"> #MOTIVATE </h1>
+                <div class="text-center">
+                    <img class="logo" src="#">
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-4 text-center col-md-offset-4">
-                    <a href = "challenge-friendsearch.html" class = "btn btn-danger" id = "buttonsize">CHALLENGE!</a><br><br>
-                    <a href = "acceptdecline.html" class = "btn btn-default" id = "buttonsize">ACCEPT/DECLINE REQUESTS</a><br><br>
-                    <a href = "update.html" class = "btn btn-default" id = "buttonsize">UPDATE PROGRESS</a><br><br>
-                    <a href = "stats.html" class = "btn btn-default" id ="buttonsize">STATS</a>
+                    <a href = "challenge-friendsearch.html" class = "btn btn-danger buttonsize">
+                        <span class="btn-label">CHALLENGE!</span>
+                    </a>
+                    <a href = "acceptdecline.html" class = "btn btn-default buttonsize">
+                        <span class="btn-label">ACCEPT/DECLINE REQUESTS</span>
+                    </a>
+                    <a href = "update.html" class = "btn btn-default buttonsize">
+                        <span class="btn-label">UPDATE PROGRESS</span>
+                    </a>
+                    <a href = "stats.html" class = "btn btn-default buttonsize">
+                        <span class="btn-label">STATS</span>
+                    </a>
                 </div>
             </div>
         </div>
