updated progress.html dropwdowns

--- a/splashpage.html
+++ b/splashpage.html
@@ -22,9 +22,8 @@
 
     <body>
         <div class="container-fluid">
-            <h1 class = "text-center" style = "color: #D8403A;">#MOTIVATE</h1>
             <div class = "text-center">
-                <img id = "logo" src = "http://cdn.british-gymnastics.org/images/clubsleisurecentresschools/gfa/gym_challenge.jpg" style = "width: 80%; height: 70%">
+                <img id = "logo" src = "imgs/logofinals.jpg" style = "width: 80%; height: 70%">
             </div>
 
             <div class = "text-center" >
@@ -83,7 +82,7 @@
         <div class="text-center">
             <a href="index.html"> <button type="button" class="btn" id="login"> >> Continue </button> </a>
         </div>
-        
+
     </body>
 
 </html>
