--- a/progress.html
+++ b/progress.html
@@ -170,7 +170,7 @@
                 </div>
         </div>  
 
-        <nav class="navbar nav-default navbar-static-bottom" id="bottom-nav" role="navigation">
+        <nav class="navbar nav-default navbar-fixed-bottom" id="bottom-nav" role="navigation">
             <div class="container-fluid">
                 <a href="update.html"> <button type="button" class="btn btn-danger btn-lg"> Back </button> </a>
                 <button type="button" class="btn btn-success btn-lg pull-right"> Submit </button>
