--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="text-center">
-                    <img class="logo" src="#">
+                    <img class="logo" src="imgs/logofinals.jpg" style="max-width:100%">
                 </div>
             </div>
             <div class="row">
