--- a/splashpage.html
+++ b/splashpage.html
@@ -23,7 +23,7 @@
     <body>
         <div class="container-fluid">
             <div class = "text-center">
-                <img id = "logo" src = "imgs/logofinals.jpg" style = "width: 80%; height: 70%">
+                <img id = "logo" src = "imgs/logofinals.jpg" style = "max-width: 100%">
             </div>
 
             <div class = "text-center" >
