changed colors of update.html buttons

--- a/update.html
+++ b/update.html
@@ -31,8 +31,6 @@
             </div>
         </nav>
 
-        <!-- This all appears off center because the scroll bar appears here! -->
-
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
@@ -51,7 +49,7 @@
                                     </div>
                                 </button>
                                 <br/>
-                                <button class="btn btn-large btn-block">
+                                <button class="btn btn-large btn-block" id="kevin">
                                     <div class="container-fluid">
                                         <img class="prof-pic pull-left" src="imgs/kevin.jpg"></img>
                                         <div id="text"> <br/> &nbsp; vs. Kevin Chen <br/></div>
@@ -86,12 +84,7 @@
                  </div>
             </div>
         </div>
-    </br>
-</br>
-        <nav class="navbar nav-default navbar-static-bottom" id="bottom-nav" role="navigation">
-            <div class="container-fluid">
-                <a href="homepage.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
-            </div>
-        </nav>
+        </br>
+        </br>
     </body>
 </html>
