design changes in challenge pages

--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -61,8 +61,8 @@
 
 
             <div class="container-fluid">
-                <a href="challenge-createchallenge.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
-                <a href="homepage.html"><button type="button" class="btn btn-success btn-lg pull-right"> Submit </button>
+                <a href="challenge-createchallenge.html"><button type="button" class="btn btn-lg"> Back </button></a>
+                <a href="homepage.html"><button type="button" class="btn btn-lg pull-right"> Submit </button>
             </div>
         </div>
 
