--- a/challenge-createchallenge.html
+++ b/challenge-createchallenge.html
@@ -36,36 +36,39 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <h1 class="text-center">#MOTIVATE</h1>
-                    <h3 class="text-center">Challenge!</h3>
-                    <br>
-                    <br>
-                    <br>
+                <div class="text-center col-md-4 col-md-offset-4">
+                    <img class="logo" src="imgs/logofinals.jpg">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 text-center col-md-offset-4">
                     <span class="text-left">SELECT A CHALLENGE:</span>
                     <br>
                     <br>
-                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id = "buttonsize">Run 3 Miles</a><br>
-                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id = "buttonsize">Bench 100 lbs</a><br>
-                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id = "buttonsize">Go to the gym 4 times a week</a><br>
-                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id = "buttonsize">Do 100 pushups</a><br>
-                    <a href = "challenge-challengeconfirm.html" class = "btn btn-default" id ="buttonsize">Create a new challenge</a><br>
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                        <span class="btn-label">Run 3 Miles</span>
+                    </a><br>
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                        <span class="btn-label">Bench 100 lbs</span>
+                    </a><br>
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                        <span class="btn-label">Go to the gym 4 times a week</span>
+                    </a><br>
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                        <span class="btn-label">Do 100 pushups</span>
+                    </a><br>
+                    <a href="challenge-challengeconfirm.html" class="btn btn-default buttonsize">
+                        <span class="btn-label">Create a new challenge</span>
+                    </a><br>
                 <div class="col-md-4"></div>
             </div>
         </div>
-                <div class ="navbar navbar-default navbar-fixed-bottom">
-
-
+        
+        <div class ="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
-                <a href="challenge-friendsearch.html"><button type="button" class="btn btn-danger btn-lg"> Back </button></a>
+                <a href="challenge-friendsearch.html"><button type="button" class="btn btn-lg"> Back </button></a>
+                <a href="challenge-challengeconfirm.html"><button type="button" class="btn btn-lg pull-right"> Next </button></a>
             </div>
         </div>
     </body>
-
-<style>
-    #buttonsize {
-        width: 100%;
-    }
-</style>
-
 </html>
