--- a/challenge-friendsearch.html
+++ b/challenge-friendsearch.html
@@ -36,25 +36,22 @@
 
         <div class="container-fluid">
             <div class="row">
+                <div class="text-center col-md-4 col-md-offset-4">
+                    <img class="logo" src="imgs/logofinals.jpg">
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-4 col-md-offset-4">
-                    <h1 class="text-center">#MOTIVATE</h1>
-                    <h3 class="text-center">Challenge!</h3>
-                    <br>
-                    <br>
                     <span class="text-left">WHO TO CHALLENGE:</span>
                     <br>
                     <br>
-                    <div class="input-group add-on">
-                        <input type="text" class="form-control" id="search-box" placeholder="Type a Friend's name"/>
-                        <div class="input-group-btn"> 
-                            <a href="challenge-createchallenge.html">
-                                <button class="btn btn-default" id="search-button" type="submit">
-                                    <i class="glyphicon glyphicon-search"></i>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-                <div class="col-md-4"></div>
+                    <input type="text" class="form-control" id="search-box" placeholder="Type a Friend's name"/>
+                </dvi>
+            </div>
+        </div>
+        <div class ="navbar navbar-default navbar-fixed-bottom">
+            <div class="container-fluid">
+                <a href="challenge-createchallenge.html"><button type="button" class="btn btn-lg pull-right"> Next </button></a>
             </div>
         </div>
     </body>
