--- a/homepage.html
+++ b/homepage.html
@@ -33,8 +33,8 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="text-center">
-                    <img class="logo" src="#">
+                <div class="col-md-4 text-center col-md-offset-4">
+                    <img class="logo" src="imgs/logofinals.jpg">
                 </div>
             </div>
             <div class="row">
