--- a/challenge-challengeconfirm.html
+++ b/challenge-challengeconfirm.html
@@ -36,20 +36,21 @@
 
         <div class="container-fluid">
             <div class="row">
-                <h1 class="text-center"> #MOTIVATE </h1>
+                <div class="col-md-4 text-center col-md-offset-4">
+                    <img class="logo" src="imgs/logofinals.jpg">
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-4">
                     <div class="container-fluid" id="progress-box">
                         <br> <center>
-                        <img src="imgs/eric.jpg" class = "img-rounded" style="max-width: 42%;">
+                        <img src="imgs/eric.jpg" class="img-rounded prof-pic" style="max-width: 42%;">
                         vs. 
-                        <img src="imgs/ted.jpg" class = "img-rounded" style="max-width: 42%;">
+                        <img src="imgs/ted.jpg" class="img-rounded prof-pic" style="max-width: 42%;">
                         <br/></center>
-                        <h3 class="text-center"> Challenge Confirmation </h3>
+                        <h3 class="text-left"> Challenge Confirmation:</h3>
                         <ul class="list-group">
                           <li class="list-group-item">
-                            <center>Run 3 miles</center>
+                            <center>Run 3 Miles</center>
                           </li>
                         </ul>
                     </div>
