--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <div class = "text-center">
                 <img id = "logo" src = "imgs/logofinals.jpg" style = "max-width: 100%">
             </div>
-
-            <div class = "text-center" >
-                #Motivate is a mobile application that fosters a community of people who enjoy fitness challenges and healthy competition. The application allows people to challenge their friends or family members to reach specific fitness goals. Users can also update their progress everyday to keep track of their fitness routines. Start challenging your friend today!
-            </div>
+            <br>
+                <div class="text-left" id="motive-descr">
+                    #Motivate is a mobile application that fosters a community of people who enjoy fitness challenges and healthy competition. The application allows people to challenge their friends or family members to reach specific fitness goals. Users can also update their progress everyday to keep track of their fitness routines. Start challenging your friend today!
+                </div>
         </div>
-        <br> <br>
+        <br>
         <div class = "container-fluid">
             <div class="col-xs-12">
                 <div class="thumbnail">
@@ -65,7 +65,7 @@
         </div>
 
         <div class="text-center">
-            <a href="index.html"> <button type="button" class="btn" id="login"> >> Continue </button> </a>
+            <a href="login.html"> <button type="button" class="btn" id="login"> >> Continue </button> </a>
         </div>
 
     </body>
